--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ script:
     - cd build
     - cmake .. -DCMAKE_BUILD_TYPE=$BUILD_CONFIGURATION -DTARGET_CPU=$TARGET_CPU
     - make
+    - ./bit_algo
 
 notifications:
     email:
