--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,14 @@ compiler:
     - clang
 
 env:
-    - TARGET_CPU=amd64 BUILD_CONFIGURATION=Debug
-    - TARGET_CPU=amd64 BUILD_CONFIGURATION=Release
-    - TARGET_CPU=x86 BUILD_CONFIGURATION=Debug
-    - TARGET_CPU=x86 BUILD_CONFIGURATION=Release
+    - TARGET_CPU=amd64 BUILD_CONFIGURATION=Release CXXSTD=03
+    - TARGET_CPU=x86 BUILD_CONFIGURATION=Release CXXSTD=03
+
+    - TARGET_CPU=amd64 BUILD_CONFIGURATION=Release CXXSTD=11
+    - TARGET_CPU=x86 BUILD_CONFIGURATION=Release CXXSTD=11
+
+    - TARGET_CPU=amd64 BUILD_CONFIGURATION=Release CXXSTD=14
+    - TARGET_CPU=x86 BUILD_CONFIGURATION=Release CXXSTD=14
 
 matrix:
     exclude:
