--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,5 +26,5 @@ build_script:
     - mkdir build
     - cd build
     - cmake .. -DBOOST_ROOT=C:\Libraries\boost_1_67_0 -DYEAR=11
-    - make
+    - cmake --build .
     - start bit_algo.exe
