--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,7 +14,6 @@ platform:
     - x86
 
 environment:
-    CONFIG: Release
     BOOST_ROOT: "C:\\Libraries\\boost_1_67_0"
     BOOST_LIBRARYDIR: "C:\\Libraries\\boost_1_67_0\\lib64-msvc-14.0"
     PATH: "%BOOST_LIBRARYDIR%;%PATH%"
@@ -32,6 +31,6 @@ build_script:
     - echo "%PATH%"
     - mkdir build
     - cd build
-    - cmake .. -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
+    - cmake .. -DCMAKE_BUILD_TYPE=Release -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
     - cmake --build .
     - start bit_algo.exe
