--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,15 +13,15 @@ platform:
     - x64
     - x86
 
-environment:
-    BOOST_ROOT: "C:\\Libraries\\boost_1_67_0"
-    BOOST_LIBRARYDIR: "C:\\Libraries\\boost_1_67_0\\lib64-msvc-14.0"
-    PATH: "%BOOST_LIBRARYDIR%;%PATH%"
-
 configuration:
     - Release
 
 environment:
+    CONFIG: Release
+    BOOST_ROOT: "C:\\Libraries\\boost_1_67_0"
+    BOOST_LIBRARYDIR: "C:\\Libraries\\boost_1_67_0\\lib64-msvc-14.0"
+    PATH: "%BOOST_LIBRARYDIR%;%PATH%"
+
     matrix:
         - TOOLCHAIN: msvc10
         - TOOLCHAIN: msvc12
@@ -31,6 +31,6 @@ build_script:
     - echo "%PATH%"
     - mkdir build
     - cd build
-    - cmake .. -DCMAKE_BUILD_TYPE=Release -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
+    - cmake .. -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
     - cmake --build .
     - start bit_algo.exe
