--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -32,5 +32,5 @@ build_script:
     - mkdir build
     - cd build
     - cmake .. -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
-    - cmake --build .
+    - cmake -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build .
     - start bit_algo.exe
