--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -28,9 +28,8 @@ environment:
         - TOOLCHAIN: msvc14
 
 build_script:
-    - echo "%PATH%"
     - mkdir build
     - cd build
     - cmake .. -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
     - cmake -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build .
-    - start bit_algo.exe
+    - bit_algo.exe
