--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -32,4 +32,5 @@ build_script:
     - cd build
     - cmake .. -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
     - cmake -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build .
-    - bit_algo.exe
+    - dir /s /b /o:gn
+    - cmd /K "bit_algo.exe"
