--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -32,5 +32,6 @@ build_script:
     - cd build
     - cmake .. -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
     - cmake -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build .
-    - dir /s /b /o:gn
-    - cmd /K "bit_algo.exe"
+
+test_script:
+    - ctest -V
