--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,8 @@ script:
     - mkdir build
     - cd build
     - cmake .. -DCMAKE_BUILD_TYPE=$BUILD_CONFIGURATION -DYEAR=$YEAR
-    - make
-    - ./bit_algo
+    - cmake --build .
+    - ctest -V
 
 notifications:
     email:
