--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,7 +7,7 @@ clone_folder: c:\projects\bits
 shallow_clone: true
 
 matrix:
-    fast_finish: false
+    fast_finish: true
 
 platform:
     - x64
@@ -34,4 +34,4 @@ build_script:
     - cmake -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build .
 
 test_script:
-    - ctest -V
+    - ctest -C Release -V
