--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,9 +27,10 @@ environment:
         - TOOLCHAIN: msvc12
         - TOOLCHAIN: msvc14
 
-build_script:
-    - mkdir build
-    - cd build
-    - cmake .. -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
+before_build:
+    - cmake -G "Visual Studio 15 2017 Win64" .
+
+build:
+    # - cmake . -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
     - cmake -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build .
     - ctest -C Release -V
