--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,10 +27,8 @@ environment:
         - TOOLCHAIN: msvc12
         - TOOLCHAIN: msvc14
 
-before_build:
-    - cmake -G "Visual Studio 15 2017 Win64" .
-
 build_script:
-    # - cmake . -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
+    - cmake . -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
     - cmake -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build .
+    - dir /s /b /o:gn
     - ctest -C Release -V
