--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -30,6 +30,6 @@ environment:
 build_script:
     - cmake . -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
     # - cmake -DCMAKE_BUILD_TYPE="%CONFIG%" -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build .
-    - msbuild .
     - dir /s /b /o:gn
+    - msbuild bit_algo.sln
     - ctest -C Release -V
