--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -42,4 +42,6 @@ build_script:
   - mkdir build
   - cd build
   - cmake .. -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
-  - cmake -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build . --target check
+  - cmake -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build . 
+  - dir /s /b /o:gn
+  - ctest -C Release -V
