--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -43,5 +43,6 @@ build_script:
   - cd build
   - cmake .. -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
   - cmake -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build . 
+  - msbuild bit_algo.sln
   - dir /s /b /o:gn
   - ctest -C Release -V
