--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 3.9.2)
 set(CMAKE_CXX_STANDARD ${YEAR})
 project(bit_algo)
 
+### TESTING
+enable_testing()
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
 
 file(GLOB SOURCE_FILES "test/*cpp")
@@ -10,11 +13,4 @@ file(GLOB SOURCE_FILES "test/*cpp")
 find_package(Boost COMPONENTS random system chrono REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 
-# Executable
-add_executable(bit_algo ${SOURCE_FILES})
-
-target_link_libraries(bit_algo ${Boost_LIBRARIES})
-
-### TESTING
-enable_testing()
-add_test (NAME MyTest COMMAND bit_algo)
+add_subdirectory(test build/test)
