--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -41,8 +41,7 @@ before_build:
 build_script:
   - mkdir build
   - cd build
-  - cmake .. -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11
+  - cmake -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 ..
   - cmake -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build . 
-  - msbuild bit_algo.sln
   - dir /s /b /o:gn
-  - ctest -C Release -V
+  - ctest -V
