--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -44,4 +44,4 @@ build_script:
   - cmake -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 ..
   - cmake -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" -DYEAR=11 --build . 
   - dir /s /b /o:gn
-  - ctest -V
+  - ctest -C Debug -V
